@@ -60,6 +60,12 @@
 	* am/strconf.am: updated headers for release
 	* am/version.am: updated headers for release
 
+	* snmp/ds_agent.h: updated headers for release
+	* snmp/header_complex.h: updated headers for release
+	* snmp/mib_modules.h: updated headers for release
+	* snmp/struct.h: updated headers for release
+	* snmp/util_funcs.h: updated headers for release
+
 2008-04-25  Brian Bidulock  <bidulock@openss7.org>
 
 	* openss7.refs: updated references
